Complete search stocks by symbol

--- a/StockTracker/src/main/resources/static/index.html
+++ b/StockTracker/src/main/resources/static/index.html
@@ -9,13 +9,15 @@
 	<h1>Welcome to Stock Tracker</h1>
 
 	<form name="stockForm">
-		<input type="text" name="sector">
+		<input type="text" name="symbol">
 		<button name="lookup">Get Stock By Symbol</button>
 	</form>
+	<div id="stockDiv"></div>
 
-
-
-	<div id="sectorList"></div>
+	<hr>
+	<div id="sectorList">	
+		
+	</div>
 	<div id="sectorHeader"></div>
 	<div id="stockList"></div>
 
