complete add stock

--- a/StockTracker/src/main/resources/static/index.html
+++ b/StockTracker/src/main/resources/static/index.html
@@ -27,28 +27,30 @@
 			<label for="symbol">Symbol</label> <input type="text" name="symbol">
 			<br> <label for="company">Company</label> <input type="text"
 				name="company"> <br> <label for="pe">PE Ratio</label> <input
-				type="number" name="pe"> <br> <label for="shares">Number
+				type="number" name="peRatio"> <br> <label for="shares">Number
 				of Shares</label> <input type="text" name="shares"> <br> <label
 				for="date">Date</label> <input type="date" name="date"> <br>
 			<label for="price">Close Price</label> <input type="number"
 				name="price"> <br> <label for="sector">Sector</label> <select
-				name="sector">
-				<option value="Communication Services">Communication Services</option>
-				<option value="Consumer Discretionary">Consumer Discretionary</option>
-				<option value="Consumer Staples">Consumer Staples</option>
-				<option value="Energy">Energy</option>
-				<option value="Financials">Financials</option>
-				<option value="Health Care">Health Care</option>
-				<option value="Industrials">Industrials</option>
-				<option value="Information Technology">Information Technology</option>
-				<option value="Materials">Materials</option>
-				<option value="Real Estate">Real Estate</option>
-				<option value="Utilities">Utilities</option>
+				name="sectorId">
+				<option value="1">Communication Services</option>
+				<option value="2">Consumer Discretionary</option>
+				<option value="3">Consumer Staples</option>
+				<option value="4">Energy</option>
+				<option value="5">Financials</option>
+				<option value="6">Health Care</option>
+				<option value="7">Industrials</option>
+				<option value="8">Information Technology</option>
+				<option value="9">Materials</option>
+				<option value="10">Real Estate</option>
+				<option value="11">Utilities</option>
 			</select> <br>
 
 		<button name="addStock">Add Stock</button>
 		</form>
+		
 	</div>
+	<div id="addStockResult"></div>
 
 
 </body>
