--- a/StockTracker/src/main/resources/static/index.html
+++ b/StockTracker/src/main/resources/static/index.html
@@ -34,7 +34,7 @@
 				for="date">Date</label> <input type="date" id="date" name="date"> <br>
 			<label for="price">Close Price</label> <input type="number"
 				id="price" name="price"> <br> <label for="sector">Sector</label> <select
-				is="sectorId" name="sectorId">
+				id="sectorId" name="sectorId">
 				<option value="1">Communication Services</option>
 				<option value="2">Consumer Discretionary</option>
 				<option value="3">Consumer Staples</option>
@@ -53,7 +53,17 @@
 		
 	</div>
 	<div id="addStockResult"></div>
-
+<!-- <option value="Communication Services">Communication Services</option>
+				<option value="Consumer Discretionary">Consumer Discretionary</option>
+				<option value="Consumer Staples">Consumer Staples</option>
+				<option value="Energy">Energy</option>
+				<option value="Financials">Financials</option>
+				<option value="Health Care">Health Care</option>
+				<option value="Industrials">Industrials</option>
+				<option value="Information Technology">Information Technology</option>
+				<option value="Materials">Materials</option>
+				<option value="Real Estate">Real Estate</option>
+				<option value="Utilities">Utilities</option> -->
 
 </body>
 </html>
