--- a/StockTracker/src/main/resources/static/index.html
+++ b/StockTracker/src/main/resources/static/index.html
@@ -1,59 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Stock Tracker</title>
-<script type="text/javascript" src="js/script.js"></script>
-</head>
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="utf-8">
+  <title>NgStockTracker</title>
+  <base href="/StockTracker/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<style>@charset "UTF-8";:root{--bs-blue:#0d6efd;--bs-indigo:#6610f2;--bs-purple:#6f42c1;--bs-pink:#d63384;--bs-red:#dc3545;--bs-orange:#fd7e14;--bs-yellow:#ffc107;--bs-green:#198754;--bs-teal:#20c997;--bs-cyan:#0dcaf0;--bs-black:#000;--bs-white:#fff;--bs-gray:#6c757d;--bs-gray-dark:#343a40;--bs-gray-100:#f8f9fa;--bs-gray-200:#e9ecef;--bs-gray-300:#dee2e6;--bs-gray-400:#ced4da;--bs-gray-500:#adb5bd;--bs-gray-600:#6c757d;--bs-gray-700:#495057;--bs-gray-800:#343a40;--bs-gray-900:#212529;--bs-primary:#0d6efd;--bs-secondary:#6c757d;--bs-success:#198754;--bs-info:#0dcaf0;--bs-warning:#ffc107;--bs-danger:#dc3545;--bs-light:#f8f9fa;--bs-dark:#212529;--bs-primary-rgb:13, 110, 253;--bs-secondary-rgb:108, 117, 125;--bs-success-rgb:25, 135, 84;--bs-info-rgb:13, 202, 240;--bs-warning-rgb:255, 193, 7;--bs-danger-rgb:220, 53, 69;--bs-light-rgb:248, 249, 250;--bs-dark-rgb:33, 37, 41;--bs-white-rgb:255, 255, 255;--bs-black-rgb:0, 0, 0;--bs-body-color-rgb:33, 37, 41;--bs-body-bg-rgb:255, 255, 255;--bs-font-sans-serif:system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";--bs-font-monospace:SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;--bs-gradient:linear-gradient(180deg, rgba(255, 255, 255, .15), rgba(255, 255, 255, 0));--bs-body-font-family:var(--bs-font-sans-serif);--bs-body-font-size:1rem;--bs-body-font-weight:400;--bs-body-line-height:1.5;--bs-body-color:#212529;--bs-body-bg:#fff;--bs-border-width:1px;--bs-border-style:solid;--bs-border-color:#dee2e6;--bs-border-color-translucent:rgba(0, 0, 0, .175);--bs-border-radius:.375rem;--bs-border-radius-sm:.25rem;--bs-border-radius-lg:.5rem;--bs-border-radius-xl:1rem;--bs-border-radius-2xl:2rem;--bs-border-radius-pill:50rem;--bs-link-color:#0d6efd;--bs-link-hover-color:#0a58ca;--bs-code-color:#d63384;--bs-highlight-bg:#fff3cd}*,*:before,*:after{box-sizing:border-box}@media (prefers-reduced-motion: no-preference){:root{scroll-behavior:smooth}}body{margin:0;font-family:var(--bs-body-font-family);font-size:var(--bs-body-font-size);font-weight:var(--bs-body-font-weight);line-height:var(--bs-body-line-height);color:var(--bs-body-color);text-align:var(--bs-body-text-align);background-color:var(--bs-body-bg);-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:rgba(0,0,0,0)}</style><link rel="stylesheet" href="styles.fd51ec964200c16d.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.fd51ec964200c16d.css"></noscript></head>
 <body>
-	<h1>Welcome to Stock Tracker</h1>
+  <app-root></app-root>
+<script src="runtime.1b4afca8d1d3bd3c.js" type="module"></script><script src="polyfills.e93db6d448f1f3f4.js" type="module"></script><script src="main.aa2df59be7171828.js" type="module"></script>
 
-	<form name="stockForm">
-		<input type="text" name="symbol">
-		<button name="lookup">Get Stock By Symbol</button>
-	</form>
-	<div id="stockDiv"></div>
-
-	<hr>
-	<div id="sectorList">	
-		
-	</div>
-	<div id="sectorHeader"></div>
-	<div id="stockList"></div>
-	
-	<hr>
-	<div id="addStockFormDiv">
-		<h2>Stock Form</h2>
-		
-		<form name="addStockForm">
-			<label for="symbol">Symbol</label> <input type="text" id="symbol" name="symbol">
-			<br> <label for="company">Company</label> <input type="text"
-				id="company" name="company"> <br> <label for="pe">PE Ratio</label> <input
-				type="number" id="ratio" name="peRatio"> <br> <label for="shares">Number
-				of Shares</label> <input type="text" id="shares" name="shares"> <br> <label
-				for="date">Date</label> <input type="date" id="date" name="date"> <br>
-			<label for="price">Close Price</label> <input type="number"
-				id="price" name="price"> <br> <label for="sector">Sector</label> <select
-				id="sectorId" name="sectorId">
-				<option value="1">Communication Services</option>
-				<option value="2">Consumer Discretionary</option>
-				<option value="3">Consumer Staples</option>
-				<option value="4">Energy</option>
-				<option value="5">Financials</option>
-				<option value="6">Health Care</option>
-				<option value="7">Industrials</option>
-				<option value="8">Information Technology</option>
-				<option value="9">Materials</option>
-				<option value="10">Real Estate</option>
-				<option value="11">Utilities</option>
-			</select> <br>
-
-		<button name="submit">submit</button>
-		</form>
-		
-	</div>
-	<div id="addStockResult"></div>
-
-
-</body>
-</html>
+</body></html>
